Test: 일부 코드들 수정